--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,27 @@ permissions:
   contents: read
 
 jobs:
+
+  sast_scan:
+    environment: SECURITY
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Self sast-scan
+        uses: AppThreat/sast-scan-action@v1.0.0
+        with:
+          output: reports
+          type: python,bash
+      - name: Upload scan reports
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: sast-scan-reports
+          path: reports
+
   build:
+    environment: DEV
+    needs: sast_scan
 
     runs-on: ubuntu-latest
 
