--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: step-security/harden-runner@2e205a28d0e1da00c5f53b161f4067b052c61f34
+        with:
+          egress-policy: audit
       - name: Checkout
         uses: actions/checkout@v3
       - name: Login to Docker Hub
